<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/container_background_color"
    tools:context=".FragmentMoviesDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="16dp"
            android:orientation="vertical" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="16dp"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/bg_image"
            android:src="@drawable/bg_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_limit"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintBottom_toBottomOf="@id/bg_image"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/film_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/film_name"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="38sp"
            app:layout_constraintTop_toBottomOf="@id/bg_image"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintBottom_toTopOf="@+id/genre" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textColor="@color/genre_color"
            app:layout_constraintTop_toBottomOf="@id/film_name"
            app:layout_constraintStart_toEndOf="@id/content_start"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintBottom_toTopOf="@+id/reviews"
            app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="sans-serif"
            android:textSize="16sp"

            />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/AppRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/reviews"
            app:layout_constraintStart_toEndOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintBottom_toBottomOf="@id/reviews"
            app:layout_constraintEnd_toStartOf="@id/reviews"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_count"
            android:textColor="@color/gray"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/label_bottom_barrier"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/genre"
            android:fontFamily="sans-serif"
            tools:ignore="TextContrastCheck"
            android:layout_marginTop="8dp"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/label_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="film_name, genre, reviews, ratingBar"

            />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/storyline"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/label_bottom_barrier"
            app:layout_constraintStart_toEndOf="@id/content_start"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/whiteF"
            android:fontFamily="sans-serif-light"
            app:layout_constraintTop_toBottomOf="@id/storyline"
            app:layout_constraintStart_toEndOf="@id/content_start"
            app:layout_constraintEnd_toStartOf="@id/content_end"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/cast_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cast_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toEndOf="@id/content_start"
            android:layout_marginTop="16dp"
            />

        <ImageView
            android:id="@+id/actor1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/downey"
            app:layout_constraintStart_toEndOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/cast_label"
            app:layout_constraintEnd_toStartOf="@id/actor2"
            app:layout_constraintBottom_toTopOf="@id/name_actor1"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/name_actor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Robert\nDowney Jr."
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/actor_name"
            app:layout_constraintTop_toBottomOf="@id/actor1"
            app:layout_constraintStart_toStartOf="@id/actor1"

            />

        <ImageView
            android:id="@+id/actor2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/evans"
            app:layout_constraintStart_toEndOf="@id/actor1"
            app:layout_constraintTop_toTopOf="@id/actor1"
            app:layout_constraintEnd_toStartOf="@id/actor3"
            app:layout_constraintBottom_toTopOf="@id/name_actor2"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/name_actor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chris\nEvans"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/actor_name"
            app:layout_constraintTop_toBottomOf="@id/actor2"
            app:layout_constraintStart_toStartOf="@id/actor2"
            />

        <ImageView
            android:id="@+id/actor3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ruffalo"
            app:layout_constraintStart_toEndOf="@id/actor2"
            app:layout_constraintTop_toTopOf="@id/actor1"
            app:layout_constraintEnd_toStartOf="@id/actor4"
            app:layout_constraintBottom_toTopOf="@id/name_actor3"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/name_actor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mark\nRuffalo"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/actor_name"
            app:layout_constraintTop_toBottomOf="@id/actor3"
            app:layout_constraintStart_toStartOf="@id/actor3"

            />


        <ImageView
            android:id="@+id/actor4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/hemsworth"
            app:layout_constraintStart_toEndOf="@id/actor3"
            app:layout_constraintTop_toTopOf="@id/actor1"
            app:layout_constraintEnd_toStartOf="@id/content_end"
            app:layout_constraintBottom_toTopOf="@id/name_actor4"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/name_actor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chris\nHemsworth"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/actor_name"
            app:layout_constraintTop_toBottomOf="@id/actor4"
            app:layout_constraintStart_toStartOf="@id/actor4"
            app:layout_constraintEnd_toEndOf="@id/actor4"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>